<resources>
    <string name="app_name">NUMAD21Su-EmilyColladay</string>
    <string name="About">About</string>
    <string name="Contact">Emily Colladay | ecolladay@gmail.com</string>
    <string name="Dog">Dog</string>
    <string name="Letters">Letters</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="ButtonPressed">Button pressed: none</string>
    <string name="Links">Links</string>
    <string name="linkName">linkName</string>
    <string name="hyperLink">hyperLink</string>
    <string name="LinkAdded">Link was successfully added!</string>
    <string name="name_of_link">Name of website:</string>
    <string name="link">Link:</string>
    <string name="cancel">Cancel</string>
    <string name="add_link">Add link</string>
    <string name="type_in_link_here">Type in link here</string>
    <string name="type_in_name_of_website_here">Type in name of website here</string>
    <string name="location">Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="locator">Locator</string>
    <string name="web">Web</string>
    <string name="convertTitle">Amount to convert</string>
    <string name="type_dollar_amount">Type dollar amount</string>
    <string name="convert">Convert</string>
    <string name="meaning">Meaning</string>
    <string name="dictionary">Dictionary</string>
    <string name="get_definition">Get Definition</string>
    <string name="please_wait_while_we_fetch_your_result">Please wait while we fetch your result</string>
    <string name="type_word_into_dictionary">Type in word here</string>
    <string name="definition">Definition</string>
    <string name="close">Close</string>
    <string name="open_books">Open books</string>
</resources>