<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/B"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="250dp" />

    <Button
        android:id="@+id/button_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/A"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="252dp" />

    <Button
        android:id="@+id/button_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/C"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="249dp" />

    <Button
        android:id="@+id/button_D"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/D"
        android:textStyle="bold"

        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="356dp" />

    <Button
        android:id="@+id/button_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/E"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="356dp" />

    <Button
        android:id="@+id/button_F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/F"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="356dp" />


</androidx.constraintlayout.widget.ConstraintLayout>